fixed writeable->writable in test_recipe

--- a/stimela/tests/test_recipe.yml
+++ b/stimela/tests/test_recipe.yml
@@ -24,7 +24,7 @@ cabs:
       ms:
         dtype: MS
         required: true
-        writeable: true
+        writable: true
         alias: data-ms
 
   wsclean:
