added support for skipping steps, and specifying a step range from the command line. Cleaned up logfile handling so that log messages are not duplicated by parent.

--- a/stimela/cargo/cabs/wsclean.yaml
+++ b/stimela/cargo/cabs/wsclean.yaml
@@ -83,6 +83,12 @@ inputs:
     dtype: float
   save_source_list:
     dtype: bool
+  parallel_deconvolution:
+    dtype: int
+  predict:
+    dtype: bool
+  no_update_model_required:
+    dtype: bool
 
 outputs:
   msout:
@@ -123,4 +129,4 @@ outputs:
   source_list:
     info: Source list
     dtype: File
-    implicit: "{self.prefix}-source-list.txt"
+    implicit: "{self.prefix}-sources.txt"
