added temp_dir to wsclean

--- a/stimela/cargo/lib/params/wsclean.yaml
+++ b/stimela/cargo/lib/params/wsclean.yaml
@@ -76,6 +76,8 @@ base_inputs:
     dtype: bool
   no_update_model_required:
     dtype: bool
+  temp_dir:
+    dtype: Dir
 
 base_outputs:
   msout:
