--- a/stimela/cargo/lib/params/wsclean.yaml
+++ b/stimela/cargo/lib/params/wsclean.yaml
@@ -77,7 +77,7 @@ base_inputs:
   no_update_model_required:
     dtype: bool
   temp_dir:
-    dtype: Dir
+    dtype: Directory
 
 base_outputs:
   msout:
