--step can accept comma-seperated names as well

--- a/stimela/cargo/lib/params/wsclean.yaml
+++ b/stimela/cargo/lib/params/wsclean.yaml
@@ -80,6 +80,11 @@ base_inputs:
     dtype: bool
   no_update_model_required:
     dtype: bool
+  cont:
+    dtype: bool
+    nom_de_guerre: continue 
+  subtract_model:
+    dtype:  bool
   temp_dir:
     dtype: Directory
 
