fixed repeated for-loops. Added mkdir=true to wsclean: prefix

--- a/stimela/cargo/lib/params/wsclean.yaml
+++ b/stimela/cargo/lib/params/wsclean.yaml
@@ -11,6 +11,7 @@ base_inputs:
     dtype: str
     nom_de_guerre: name
     required: true
+    mkdir: true
   column:
     dtype: str
     nom_de_guerre: data-column
