cleanups to error messages

--- a/stimela/cargo/lib/params/wsclean.yaml
+++ b/stimela/cargo/lib/params/wsclean.yaml
@@ -79,6 +79,8 @@ base_inputs:
     dtype: float
   save_source_list:
     dtype: bool
+  store_imaging_weights:
+    dtype: bool
   parallel_deconvolution:
     dtype: int
   parallel_gridding:
