--- a/stimela/tests/test_loop_recipe.yml
+++ b/stimela/tests/test_loop_recipe.yml
@@ -8,8 +8,6 @@ cabs:
       ms:
         dtype: str
         required: true
-        writeable: true
-        alias: data-ms
 
   myclean:
     command: echo # just a dummy for now 
@@ -17,8 +15,8 @@ cabs:
       ms:
         dtype: str
         required: true
-        writeable: true
-        alias: data-ms
+      prefix:
+        dtype: str        
 
 ## lib.recipes.* may be added to and invoked via _use
 lib:
@@ -52,45 +50,55 @@ lib:
       steps:
         cubical_image:
           recipe:
-            _use: lib.recipes.cubical_image
+            _use: cubical_image
 
 opts:
   log:
-    dir: logs-{datetime} 
+    dir: logs-{config.run.datetime} 
     nest: 3
+    symlink: logs
 
 
 ## but also top-level sections are treated as recipe names
 cubical_image:
   name: "cubical_image"
   info: 'does one step of cubical, followed by one step of imaging'
-  dirs:
-    log: logs
+
+  assign:
+    dir: 
+      out: 'output'
+    x: 1
+    y: 2
+    # stage: 0
+    image-prefix: "{recipe.dir.out}/im{info.suffix}-{recipe.loop-name}/im{info.suffix}-{recipe.loop-name}"
+    loop-name: "s{recipe.loop:02d}"
+    log:
+      dir: logs-{config.run.datetime}
+      name: log-{recipe.loop-name}-{info.fqname}.txt
+
+  for_loop:
+    var: loop
+    over: [1,2,3]
+
   aliases:
-    ms: [calibrate.ms, image.ms]
+    ms: [calibrate.ms, image-1.ms]
+
   steps: 
     calibrate: 
         cab: cubical
-    image:
+    image-1:
         cab: myclean
+        params:
+          prefix: "{recipe.image-prefix}" 
+
+
 
 ## ....and can be invoked via _use, see below
-## The current default recipe to run is called "recipe", but use exec -r to override
 recipe:
-  name: "test loop"
-  for_loop:
-    var: ms
-    over: ms_list
-  aliases:
-    ms: ['cubical_image.ms']
-  inputs:
-    ms_list:
-      dtype: List[str]
-      required: true
-  defaults:
-    ms_list: [a,b,c]
-  logname: "{name}.MS{params.ms}"
-  steps:
-    cubical_image:
-      recipe:
-        _use: cubical_image
+  _use: lib.recipes.test-loop-recipe
+
+  
+recipe2:
+  _use: cubical_image
+
+  
