--- a/stimela/cargo/cabs/wsclean_pol.yaml
+++ b/stimela/cargo/cabs/wsclean_pol.yaml
@@ -27,35 +27,35 @@ outputs:
   dirty:
     info: Dirty images
     dtype: List[File]
-    implicit: "{self.prefix}-[0-9][0-9][0-9][0-9]-[IQUV]-dirty.fits"
+    implicit: "{current.prefix}-[0-9][0-9][0-9][0-9]-[IQUV]-dirty.fits"
   restored: 
     info: Restored images
     dtype: List[File]
-    implicit: "{self.prefix}-[0-9][0-9][0-9][0-9]-[IQUV]-image.fits"
+    implicit: "{current.prefix}-[0-9][0-9][0-9][0-9]-[IQUV]-image.fits"
   residual:
     dtype: List[File]
-    implicit: "{self.prefix}-[0-9][0-9][0-9][0-9]-[IQUV]-residual.fits"
+    implicit: "{current.prefix}-[0-9][0-9][0-9][0-9]-[IQUV]-residual.fits"
   model:
     info: Model images
     dtype: List[File]
-    implicit: "{self.prefix}-[0-9][0-9][0-9][0-9]-[IQUV]-model.fits"
+    implicit: "{current.prefix}-[0-9][0-9][0-9][0-9]-[IQUV]-model.fits"
   restored_mfs_i:
     info: Restored MFS images
     dtype: File
-    implicit: "{self.prefix}-MFS-I-image.fits"
+    implicit: "{current.prefix}-MFS-I-image.fits"
   restored_mfs:
     info: Restored MFS images
     dtype: List[File]
-    implicit: "{self.prefix}-MFS-[IQUV]-image.fits"
+    implicit: "{current.prefix}-MFS-[IQUV]-image.fits"
   residual_mfs:
     info: Residual MFS images
     dtype: List[File]
-    implicit: "{self.prefix}-MFS-[IQUV]-residual.fits"
+    implicit: "{current.prefix}-MFS-[IQUV]-residual.fits"
   model_mfs:
     info: Model MFS images
     dtype: List[File]
-    implicit: "{self.prefix}-MFS-[IQUV]-model.fits"
+    implicit: "{current.prefix}-MFS-[IQUV]-model.fits"
   dirty_mfs:
     info: Dirty MFS images
     dtype: List[File]
-    implicit: "{self.prefix}-MFS-[IQUV]-dirty.fits"
+    implicit: "{current.prefix}-MFS-[IQUV]-dirty.fits"
