fixes to prevalidation. Minor fixes to logging.

--- a/stimela/cargo/lib/params/wsclean.yaml
+++ b/stimela/cargo/lib/params/wsclean.yaml
@@ -52,6 +52,9 @@ base_inputs:
   niter:
     info: Number of minor clean iterations
     dtype: int
+  nmiter:
+    info: Max number of major clean iterations
+    dtype: int
   fits_mask:
     dtype: File
   threshold:
